# libdmusic

./: .gitignore  .gitmodules  .travis.yml  .trigger_build  CMakeLists.txt  LICENSE  README.md  appveyor.yml
ci/: build.bat  build_libsndfile.bat  build_rtaudio.bat  build_sf2cute.bat  configure_vcpkg.bat
cmake/: FindRtAudio.cmake  FindRtAudioStatic.cmake  FindSndfile.cmake  dmusic-config.cmake.in  dmusic-config_static.cmake.in
cmake/modules/: FindRtAudio.cmake  FindRtAudioStatic.cmake  FindSndFile.cmake  FindSndfileStatic.cmake
include/dmusic/: Common.h  DirectMusic.h  DlsPlayer.h  Enums.h  Exceptions.h  Forms.h  Guid.h  InstrumentPlayer.h  Loader.h  Midi.h  MusicMessage.h  PlayingContext.h  Riff.h  Segment.h  SoundFontPlayer.h  Structs.h  Track.h  Tracks.h
include/dmusic/dls/: Common.h  DlsCommon.h  DownloadableSound.h  Instrument.h  RiffCommon.h
src/: Articulator.cpp  DlsPlayer.cpp  DownloadableSound.cpp  DummyPlayer.cpp  DummyPlayer.h  Exceptions.cpp  Instrument.cpp  Loader.cpp  MusicMessages.cpp  MusicMessages.h  PlayingContext.cpp  Region.cpp  Riff.cpp  Segment.cpp  SoundFontPlayer.cpp  Wave.cpp  decode.cpp  decode.h
src/Forms/: Band.cpp  Chordmap.cpp  ReferenceList.cpp  Segment.cpp  Style.cpp  Tracks.cpp
testbed/: main.cpp
utils/: CMakeLists.txt
utils/common/: tsf.h  tsf.hxx
utils/dls2sf/: CMakeLists.txt  README.md
utils/dls2sf/scripts/: .gitignore  convert_dls_addonworld.bat  convert_dls_addonworld.sh  convert_dls_all.sh  convert_dls_newworld.bat  convert_dls_newworld.sh  convert_styles.ps1  convert_styles.sh
utils/dls2sf/src/: decode.cpp  decode.h  dls2sf.cpp
utils/dmplay/: CMakeLists.txt  README.md
utils/dmplay/src/: dmplay.cpp
utils/dmrender/: CMakeLists.txt  README.md
utils/dmrender/src/: args.hxx  dmrender.cpp  tsf.h
utils/sampledump/: CMakeLists.txt  README.md
utils/sampledump/src/: sampledump.cpp
